--- a/BLAZAMGui/Layouts/MainAppBar.razor
+++ b/BLAZAMGui/Layouts/MainAppBar.razor
@@ -4,20 +4,28 @@
 
 
 <MudAppBar Color=Color.Default Elevation="1">
-    @if (mainLayout?.DrawerOpen != true)
-    {
+
+    <MudBreakpointProvider>
         <MudLink OnClick="@(()=>{Nav.NavigateTo(Nav.Uri);})">
             <MudImage Class="app-icon" Src="@StaticAssets.ApplicationIconUri" />
         </MudLink>
-    }
-    @if (mainLayout != null)
-    {
+        <MudHidden Breakpoint="Breakpoint.MdAndUp" Invert=true>
+            <MudText Align="Align.Center" Class="px-3 align-middle"> @DatabaseCache.ApplicationSettings?.AppAbbreviation</MudText>
 
-        <MudIconButton Icon="@Icons.Material.Filled.Menu"
-                   Color="Color.Inherit"
-                   Edge="Edge.Start"
-                   OnClick="@((e) => {mainLayout.DrawerOpen=!mainLayout.DrawerOpen; })" />
-    }
+        </MudHidden>
+
+
+        @if (mainLayout != null)
+        {
+            <MudHidden Breakpoint="Breakpoint.XlAndUp">
+                <MudIconButton Icon="@Icons.Material.Filled.Menu"
+                               Color="Color.Inherit"
+                               Edge="Edge.Start"
+                               OnClick="@((e) => {mainLayout.DrawerOpen=!mainLayout.DrawerOpen; })" />
+            </MudHidden>
+        }
+    </MudBreakpointProvider>
+    <MudSpacer />
 
     @if (mainLayout?.Header != null)
     {
@@ -26,22 +34,22 @@
     }
     else
     {
-        <SearchPageHeader Text="Search" />
+        <SearchPageHeader/>
     }
 
     <MudSpacer />
     <AuthorizeView Roles=@(UserRoles.SuperAdmin)>
         <ApplicationNewsProvider />
     </AuthorizeView>
-    <AppUserButton/>
-  
+    <AppUserButton />
+
 </MudAppBar>
 
 
 @code {
-   
+
     [CascadingParameter]
     public MainLayout mainLayout { get; set; }
-   
+
 
 }
