--- a/BLAZAM/Pages/Browse/Browse.razor
+++ b/BLAZAM/Pages/Browse/Browse.razor
@@ -4,20 +4,31 @@
 <h3>Browse</h3>
 @if (Monitor.DirectoryConnectionStatus == ServiceConnectionState.Up)
 {
+    <MudContainer Style=" position:relative;">
+        <MudDrawerContainer>
+            <MudDrawer Anchor="Anchor.End"
+                       Style="min-height:200px"
+                       Variant=DrawerVariant.Persistent
+                       @bind-Open=_drawerOpen>
+
+                <ADTreeView TextColor="Color.Surface" @bind-SelectedEntry=selectedEntry />
 
 
-    <ADTreeView @bind-SelectedOU=selectedEntry/>
-    @if (selectedEntry != null && selectedEntry is not IADOrganizationalUnit)
-    {
-        <ViewDirectoryEntry DirectoryEntry="selectedEntry" />
+            </MudDrawer>
+            @if (selectedEntry != null && selectedEntry is not IADOrganizationalUnit)
+            {
+                <ViewDirectoryEntry DirectoryEntry="selectedEntry" />
 
-    }
+            }
+        </MudDrawerContainer>
+        
+    </MudContainer>
 
 }
 @code {
 
     IDirectoryEntryAdapter? selectedEntry;
-
+    bool _drawerOpen = true;
     protected override void OnInitialized()
     {
         base.OnInitialized();
